# django_hw1

./: .env.template  .gitignore  README.md  catalog.json  config_db.py  database.example.ini  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_remove_product_date_change_and_more.py  0003_product_price.py  0003_version.py  0004_alter_version_options.py  0004_remove_product_manufactured_at_and_more.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py
catalog/templates/: contacts.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: edit_profile.html  login.html  password_reset.html  password_reset_done.html
users/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html
users/templates/users/: password_reset_done.html  user_form.html
(+1 files in other folders)
